Toontown Empire/src/user/logs/stride-151030_183710.log
TTLocalizer: Running in language: English
OTPLocalizer: Running in language: English
Preloading suits...
Preloading Toon heads...
Preloading avatars...
Traceback (most recent call last):
  File "C:\Users\Joshua\Documents\Toontown Empire\src\dependencies\panda\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "C:\Users\Joshua\Documents\Toontown Empire\src\dependencies\panda\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "C:\Users\Joshua\Documents\Toontown Empire\src\toontown\toonbase\ClientStart.py", line 171, in <module>
    from toontown.distributed import ToontownClientRepository
  File "toontown\distributed\ToontownClientRepository.py", line 32, in <module>
    from toontown.makeatoon import MakeAToon
  File "toontown\makeatoon\MakeAToon.py", line 21, in <module>
    from toontown.toon import LocalToon
  File "toontown\toon\LocalToon.py", line 100
    self.bFriendsList = DirectButton(image=(friendsButtonNormal, friendsButtonPressed, friendsButtonRollover), relief=None, pos=(-0.141, 0, -0.125), parent=base.a2dTopRight, scale=0.8, text=('', TTLocalizer.FriendsListLabel, TTLocalizer.FriendsListLabel), text_scale=0.09, text_fg=Vec4(1, 1, 1, 1), text_shadow=Vec4(0, 0, 0, 1), text_pos=(0, -0.18), text_font=ToontownGlobals.getInterfaceFont(), command=self.sendFriendsListEvent)
       ^
IndentationError: expected an indented block
